--- a/05/4/5.4.tex
+++ b/05/4/5.4.tex
@@ -7,8 +7,8 @@
 \begin{tikzpicture}
 
 \begin{axis}[%
-width=1.929in,
-height=3.566in,
+width=0.9\linewidth,
+height=0.5\linewidth,
 at={(0.777in,0.481in)},
 scale only axis,
 xmin=0,
