--- a/05/3/5.3.1.tex
+++ b/05/3/5.3.1.tex
@@ -2,13 +2,13 @@
 
 \begin{axis}[%
 width=0.9\linewidth,
-height=0.5\linewidth,
+height=0.4\linewidth,
 ymin=-300,
 ymax=50,
 xmin=0,
 xmax=8000,
-xlabel={$\text{Angular Velocity }\Omega\text{ [rpm]}$},
-ylabel={$\text{Real Parts of }\lambda{}_\text{i}\text{ [rad/s]}$},
+xlabel={Angular Velocity ($\Omega$) [rpm]},
+ylabel={Real Parts of $\lambda_i$ [rad/s]},
 grid=major,
 ]
 \addplot [color=black, forget plot]
