--- a/Text.tex
+++ b/Text.tex
@@ -460,12 +460,31 @@ The frequency of the unstable vibration is found to be \SI{57.8704}{\hertz}. Com
 
 \subsection{Unbalance response}
 Unlike with a ball bearing (see section \ref{sec:unbalance_response_ball_bearing}), the unbalance response of a hydrodynamic bearing is not infinite at the critical speed. As there is damping in the system, the response will not increase to infinity at the critical speed. The maximum displacement can be found and is shown in figure \ref{fig:hydrodynamic_bearing_unbalance_response} for a unbalance of \SI{1100}{\gram \milli \meter}.
+%\begin{figure}[ht]
+%    \centering
+%    \input{05/4/5.4.tex}
+%    \caption{Unbalance response of Hydrodynamic Bearing}
+%    \label{fig:hydrodynamic_bearing_unbalance_response}
+%\end{figure}
+
 \begin{figure}[ht]
+\begin{subfigure}[t]{0.49\textwidth}
     \centering
-    \input{05/4/5.4.tex}
-    \caption{Unbalance response of Hydrodynamic Bearing}
-    \label{fig:hydrodynamic_bearing_unbalance_response}
+    \input{05/4/5.4A.tex}
+    \caption{}
+    \label{fig:hydrodynamic_bearing_unbalance_response_natural}
+\end{subfigure}
+\hfill
+\begin{subfigure}[t]{0.49\textwidth}
+    \centering
+    \input{05/4/5.4B.tex}
+    \caption{}
+    \label{fig:hydrodynamic_bearing_unbalance_response_disp}
+\end{subfigure}
+\caption{Unbalance response of Hydrodynamic Bearing (\subref{fig:hydrodynamic_bearing_unbalance_response_natural}) shows the natural frequencies and (\subref{fig:hydrodynamic_bearing_unbalance_response_disp}) shows the displacement}
+\label{fig:hydrodynamic_bearing_unbalance_response}
 \end{figure}
+
 It can be seen that the maximum response is below the maximum allowed displacement. Thus a unbalance of \SI{1100}{\gram \milli \meter} is acceptable. Notably is that the maximum displacement is at the small disc, not the disc with a unbalance as the smaller disc is mounted further out on the shaft and thus have a larger displacement.
 
 \subsection{Engeineering application}
