--- a/04/2/4.2A.tex
+++ b/04/2/4.2A.tex
@@ -2,7 +2,7 @@
 \begin{tikzpicture}
     \begin{axis}[%
     width=1\linewidth,
-    height=1.5\linewidth,
+    height=1.3\linewidth,
     xmin=0,
     xmax=450,
     xlabel={Angular Velocity [Hz]},
@@ -12,7 +12,7 @@
     grid=major,
     legend pos = south east,
     ]
-    \addplot [color=red, line width=1.5pt]
+    \addplot [color=red]
       table[row sep=crcr]{%
     0	0\\
     7.5	7.5\\
