--- a/04/2/4.2B.tex
+++ b/04/2/4.2B.tex
@@ -2,15 +2,15 @@
 
 \begin{axis}[%
     width=1\linewidth,
-    height=1.5\linewidth,
+    height=1.3\linewidth,
     xmin=0,
     xmax=7e-05,
-    xlabel={Displ. V [\si{\meter}]},
+    xlabel={Displacment [\si{\meter}]},
     ymin=0,
     ymax=450,
     grid=major,
     ]
-    \addplot [color=blue, dashed, line width=1.5pt]
+    \addplot [color=blue, dashed]
       table[row sep=crcr]{%
     0	0\\
     2.33536039825968e-10	4.5\\
@@ -116,7 +116,7 @@
     };
     \addlegendentry{100mm disk}
     
-    \addplot [color=red, line width=1.5pt]
+    \addplot [color=red]
       table[row sep=crcr]{%
     0	0\\
     3.15432249694727e-10	4.5\\
@@ -221,7 +221,12 @@
     6.68708860088106e-07	450\\
     };
     \addlegendentry{80mm disk}
-    
+    \addplot [color=black, dashed, forget plot]
+    table[row sep=crcr]{%
+    3e-05	0\\
+    3e-05	500\\
+    };
+
     \end{axis}
     
     \end{tikzpicture}%
